# ai-citation-audit

./: .gitignore  ANALYSIS.md  README.md  project_idea.md  pyproject.toml  run_audit.sh  run_log.txt
src/citation_audit/: cli.py  llm_clients.py  parser.py  prompts.py  reporter.py  scorer.py
src/citation_audit/templates/: report.html.j2
tests/: test_parser.py  test_scorer.py
