[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-citation-audit"
version = "0.1.0"
description = "Audit how your brand is mentioned across LLM APIs."
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.25.0",
    "httpx>=0.27.0",
    "jinja2>=3.1.0",
    "openai>=1.30.0",
    "python-dotenv>=1.0.0",
    "rapidfuzz>=3.9.0",
    "typer>=0.12.0",
]

[project.scripts]
citation-audit = "citation_audit.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/citation_audit"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.hatch.envs.default]
features = ["dev"]
